syntax = "proto3";

package com.commerce.grpc;

option java_multiple_files = true;

service Commerce {
  rpc Transaction (TransactionRequest) returns (TransactionResponse) {}
  rpc PaymentsReport (PaymentsReportRequest) returns (PaymentsReportResponse) {}
}

message TransactionRequest {
  int64 customerId = 1;
  double price = 2;
  double priceModifier = 3;
  string paymentMethod = 4;
  string dateTime = 5;
  optional AdditionalItem additionalItem = 6;
}

message AdditionalItem {
  optional int32 last4 = 1;
  optional string courier = 2;
  optional BankItem BankItem = 3;
}

message BankItem {
  string bankName = 1;
  optional string accountNumber = 2;
  optional string chequeNumber = 3;
}

message TransactionResponse {
  double finalPrice = 1;
  double points = 2;
}

message PaymentsReportRequest {
  string startDateTime = 1;
  string endDateTime = 2;
}

message PaymentsReportResponse {
  repeated Payment payments = 1;
}

message Payment {
  string dateTime = 1;
  double sales = 2;
  double points = 3;
}
